fix: Update n8n Helm repository URL to 8gears GitHub Pages
The previous URL (8gears.container-registry.com) was returning malformed
index data causing Flux to fail parsing. Updated to the correct GitHub
Pages URL where the n8n Helm chart is now hosted.

This resolves the error:
  failed to load Helm repository from index YAML: failed to load index:
  error unmarshaling JSON: json: cannot unmarshal string into Go value
  of type repo.IndexFile

--- a/flux/clusters/talos/sources/helm-repositories.yaml
+++ b/flux/clusters/talos/sources/helm-repositories.yaml
@@ -23,4 +23,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://8gears.container-registry.com/chartrepo/library
+  url: https://8gears.github.io/n8n-helm-chart
