fix: Update n8n Helm repository to community-charts
The n8n Helm chart has moved to community-charts GitHub repository.
Updated the repository URL to:
  https://community-charts.github.io/helm-charts

This is the actively maintained location for the n8n Helm chart as of 2024-2025.

--- a/flux/clusters/talos/sources/helm-repositories.yaml
+++ b/flux/clusters/talos/sources/helm-repositories.yaml
@@ -23,4 +23,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://8gears.github.io/n8n-helm-chart
+  url: https://community-charts.github.io/helm-charts
