--- a/flux/clusters/talos/apps/cluster-dashboard/deployment.yaml
+++ b/flux/clusters/talos/apps/cluster-dashboard/deployment.yaml
@@ -57,6 +57,13 @@ spec:
               value: "8080"
             - name: TZ
               value: "UTC"
+            - name: TALOSCONFIG
+              value: "/etc/talos/talosconfig"
+
+          volumeMounts:
+            - name: talos-config
+              mountPath: /etc/talos
+              readOnly: true
 
           resources:
             requests:
@@ -79,10 +86,10 @@ spec:
             httpGet:
               path: /readiness
               port: http
-            initialDelaySeconds: 5
+            initialDelaySeconds: 10
             periodSeconds: 10
-            timeoutSeconds: 3
-            failureThreshold: 3
+            timeoutSeconds: 10
+            failureThreshold: 5
 
           securityContext:
             allowPrivilegeEscalation: false
@@ -98,3 +105,10 @@ spec:
         - key: node-role.kubernetes.io/control-plane
           operator: Exists
           effect: NoSchedule
+
+      # Volumes
+      volumes:
+        - name: talos-config
+          secret:
+            secretName: talos-config
+            defaultMode: 0400
