feat: Add dashboard.monitor labels to all components for visibility
Add dashboard.monitor='true' label to make components visible in the
cluster dashboard application.

## Changes

**Flux Components** (flux-system namespace):
- source-controller
- kustomize-controller
- helm-controller
- notification-controller
Added via Kustomize patch in flux-system/patch-labels.yaml

**Infrastructure**:
- cloudflared deployment (cloudflare-tunnel namespace)

**Applications**:
- cluster-dashboard deployment (cluster-dashboard namespace)

## GitOps Test

This commit demonstrates the GitOps workflow:
1. Edit manifests in Git
2. Commit and push
3. Flux detects change within 1 minute
4. Flux automatically applies labels to deployments
5. Dashboard immediately shows all components

All components will now appear in the cluster dashboard application's
monitoring view.

--- a/flux/clusters/talos/apps/cluster-dashboard/deployment.yaml
+++ b/flux/clusters/talos/apps/cluster-dashboard/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/name: cluster-dashboard
     app.kubernetes.io/component: dashboard
+    dashboard.monitor: "true"
 spec:
   replicas: 2
   strategy:
