--- a/flux/clusters/talos/infrastructure/cloudflare-tunnel/deployment.yaml
+++ b/flux/clusters/talos/infrastructure/cloudflare-tunnel/deployment.yaml
@@ -7,6 +7,7 @@ metadata:
   namespace: cloudflare-tunnel
   labels:
     app: cloudflared
+    dashboard.monitor: "true"
 spec:
   replicas: 2  # High availability
   selector:
