--- a/flux/clusters/talos/infrastructure/kube-prometheus-stack/helmrelease.yaml
+++ b/flux/clusters/talos/infrastructure/kube-prometheus-stack/helmrelease.yaml
@@ -120,7 +120,7 @@ spec:
         # Keep admin user for emergency access
         users:
           auto_assign_org: true
-          auto_assign_org_role: Viewer  # Change to Editor or Admin as needed
+          auto_assign_org_role: Viewer  # Options: Viewer, Editor, or Admin
       # Grafana ingress - disabled, using external ingress instead
       ingress:
         enabled: false
