--- a/flux/clusters/talos/infrastructure.yaml
+++ b/flux/clusters/talos/infrastructure.yaml
@@ -9,10 +9,20 @@ metadata:
 spec:
   interval: 10m
   retryInterval: 1m
-  timeout: 5m
+  timeout: 10m  # Increased timeout for CRD registration
   sourceRef:
     kind: GitRepository
     name: flux-system
   path: ./flux/clusters/talos/infrastructure
   prune: true
   wait: true
+  # Health checks to ensure CRDs are ready before apps deploy
+  healthChecks:
+    - apiVersion: apiextensions.k8s.io/v1
+      kind: CustomResourceDefinition
+      name: middlewares.traefik.io
+      namespace: ""
+    - apiVersion: apiextensions.k8s.io/v1
+      kind: CustomResourceDefinition
+      name: ingressroutes.traefik.io
+      namespace: ""
