--- a/flux/clusters/talos/kustomization.yaml
+++ b/flux/clusters/talos/kustomization.yaml
@@ -3,10 +3,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Load infrastructure.yaml first (contains infrastructure kustomization)
+  # Load Helm repositories first (needed by infrastructure)
+  - sources/helm-repositories.yaml
+  # Load infrastructure.yaml (contains infrastructure kustomization)
   - infrastructure.yaml
   # Then load apps.yaml (contains apps kustomization with dependsOn: infrastructure)
   - apps.yaml
-  # Load other resources
-  - sources
-  - notifications
