feat: Add local-path-provisioner to Flux infrastructure
- Create namespace with privileged pod security labels
- Add RBAC (ServiceAccount, Role, ClusterRole, bindings)
- Configure storage path to /var/mnt/storage
- Add control-plane toleration to helper pods
- Set as default StorageClass
- Deploy before kube-prometheus-stack (needs storage)

This enables dynamic PVC provisioning for stateful workloads
using the external 1TB SSD mounted on node .11

--- a/flux/clusters/talos/infrastructure/kustomization.yaml
+++ b/flux/clusters/talos/infrastructure/kustomization.yaml
@@ -4,4 +4,5 @@ resources:
   - traefik
   - metrics-server
   - cloudflare-tunnel
+  - local-path-provisioner  # Must deploy before kube-prometheus-stack (needs storage)
   - kube-prometheus-stack
