fix: Configure local-path-provisioner to use talos-cp1 node
Storage is only mounted on talos-cp1 (192.168.1.11) at /var/mnt/storage.
Changed nodePathMap from DEFAULT to specifically target talos-cp1.

This fixes helper pods failing with 'read-only file system' when trying
to create volumes on nodes without the storage mount.

--- a/flux/clusters/talos/infrastructure/local-path-provisioner/configmap.yaml
+++ b/flux/clusters/talos/infrastructure/local-path-provisioner/configmap.yaml
@@ -10,7 +10,7 @@ data:
     {
       "nodePathMap":[
         {
-          "node":"DEFAULT_PATH_FOR_NON_LISTED_NODES",
+          "node":"talos-cp1",
           "paths":["/var/mnt/storage"]
         }
       ]
