--- a/flux/clusters/talos/infrastructure/kube-prometheus-stack/helmrelease.yaml
+++ b/flux/clusters/talos/infrastructure/kube-prometheus-stack/helmrelease.yaml
@@ -28,6 +28,13 @@ spec:
     # Prometheus configuration
     prometheus:
       prometheusSpec:
+        # Schedule on talos-cp1 (node with storage)
+        nodeSelector:
+          kubernetes.io/hostname: talos-cp1
+        tolerations:
+          - key: node-role.kubernetes.io/control-plane
+            operator: Exists
+            effect: NoSchedule
         # Resource limits for Raspberry Pi
         resources:
           requests:
@@ -82,6 +89,13 @@ spec:
     grafana:
       enabled: true
       adminPassword: "admin"  # Change this in production
+      # Schedule on talos-cp1 (node with storage)
+      nodeSelector:
+        kubernetes.io/hostname: talos-cp1
+      tolerations:
+        - key: node-role.kubernetes.io/control-plane
+          operator: Exists
+          effect: NoSchedule
       resources:
         requests:
           cpu: 100m
@@ -136,6 +150,13 @@ spec:
     alertmanager:
       enabled: true
       alertmanagerSpec:
+        # Schedule on talos-cp1 (node with storage)
+        nodeSelector:
+          kubernetes.io/hostname: talos-cp1
+        tolerations:
+          - key: node-role.kubernetes.io/control-plane
+            operator: Exists
+            effect: NoSchedule
         resources:
           requests:
             cpu: 50m
