fix: Temporarily disable kube-prometheus-stack to break circular dependency
Infrastructure kustomization was stuck waiting for Prometheus health checks,
but Prometheus can't start without the infrastructure completing.

Disabled kube-prometheus-stack temporarily to allow:
1. Infrastructure to complete
2. Storage to be fully operational
3. Apps (cluster-dashboard) to deploy

Will re-enable Prometheus after infrastructure is ready.

--- a/flux/clusters/talos/infrastructure/kustomization.yaml
+++ b/flux/clusters/talos/infrastructure/kustomization.yaml
@@ -5,4 +5,5 @@ resources:
   - metrics-server
   - cloudflare-tunnel
   - local-path-provisioner  # Must deploy before kube-prometheus-stack (needs storage)
-  - kube-prometheus-stack
+  # TODO: Re-enable after infrastructure is ready
+  # - kube-prometheus-stack
