Removed monitoring stack from flux

--- a/flux/clusters/talos/infrastructure/kustomization.yaml
+++ b/flux/clusters/talos/infrastructure/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
   - metrics-server
   - cloudflare-tunnel
   - local-path-provisioner  # Must deploy before kube-prometheus-stack (needs storage)
-  - kube-prometheus-stack
+#  - kube-prometheus-stack
