--- a/flux/clusters/talos/apps/cluster-dashboard/kustomization.yaml
+++ b/flux/clusters/talos/apps/cluster-dashboard/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: cluster-dashboard
 resources:
   - namespace.yaml
+  - secret.yaml
   - helmrelease.yaml
   - ingress-external.yaml
   - middleware.yaml
