--- a/flux/clusters/talos/apps/rag-system/postgresql/secret.yaml
+++ b/flux/clusters/talos/apps/rag-system/postgresql/secret.yaml
@@ -1,11 +1,24 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: postgres-rag-superuser
-  namespace: rag-system
+    name: postgres-rag-superuser
+    namespace: rag-system
 type: kubernetes.io/basic-auth
 stringData:
-  username: postgres
-  password: CHANGEME-generate-strong-password
-  # After changing password above, encrypt this file with:
-  # sops --encrypt --in-place secret.yaml
+    username: ENC[AES256_GCM,data:6JwViuhk5qY=,iv:NmTgq7xqsQy1/UCch1w4TP0f1NPXmHAimZRwNBJPmVc=,tag:nkjRkmb6LriPp9nezMWi+A==,type:str]
+    password: ENC[AES256_GCM,data:Z0JnP0dmRJX+ICrNjtUBBIzzCfCkvXNgZJAD7TMjL3T41lsRcyN9P+F17A8=,iv:KW0ToocvfNhB4nVT/PJJsJz/tcPVeIlgIBSQUkyG46E=,tag:ucyZR3KR8yyWKh8L42zj1g==,type:str]
+sops:
+    age:
+        - recipient: age1p26qk2kerzdf0dj705ergv7smregn6tfy02yxwhmmdv4ldh2vqaqxvpz3t
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjRDdMM1RQSURPK1FlTWJN
+            VTdZOWw1a0tFWkl1NWZVNFFlQk1LTWdjNDJvCjZSS2J3czdYV1NpZEtGKy9EU2w2
+            M2paQ2YvMzhMcGhDckswYkl4Vko1MmMKLS0tIHN3NmNUcHJCVmNZOThQUHgzMllo
+            ZjBRY1YvWFY4R0Vnb01BZVgxYjlKUHcKagvl4eW5jNo3JKloYLkyt5uvfAhmBoO5
+            jnGPZbTWD7RFiKWFeJR6RFg9KxK83p3Lo7EGIg3mflwtADg1nsFBnA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-11-10T09:34:04Z"
+    mac: ENC[AES256_GCM,data:VwFMtWrvrK4pcbC7kSIItSrFkVK7AKdiAQOy/jI/AymYHNp75I9Cu3u9uzfJYsaVsiKHIyUAhGn/LRsPOUZzHUI/Ohty2coVQpsK7ahYfCQEcsy2vvv0p/rDtgT+vjvhwx4nw001HmfL9U26Gy1O5RSLcsDvHWUOwiezRjR1DrE=,iv:FbzpDeVtC1FKC3v+uLP4w59cSVHYpEoMyUgNvrudJic=,tag:ElgtsVkoXcX0njw0ovr/bw==,type:str]
+    encrypted_regex: ^(data|stringData)$
+    version: 3.11.0
