--- a/flux/clusters/talos/infrastructure.yaml
+++ b/flux/clusters/talos/infrastructure.yaml
@@ -16,6 +16,11 @@ spec:
   path: ./flux/clusters/talos/infrastructure
   prune: true
   wait: true
+  # SOPS decryption configuration
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   # Health checks to ensure CRDs are ready before apps deploy
   healthChecks:
     - apiVersion: apiextensions.k8s.io/v1
