--- a/flux/clusters/talos/apps/rag-system/kustomization.yaml
+++ b/flux/clusters/talos/apps/rag-system/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - postgresql
+  - cloudnative-pg-operator.yaml
+  - postgres-rag-cluster.yaml
