--- a/flux/clusters/talos/apps/rag-system/postgresql/cluster/cluster.yaml
+++ b/flux/clusters/talos/apps/rag-system/postgresql/cluster/cluster.yaml
@@ -25,20 +25,20 @@ spec:
   postgresql:
     parameters:
       # Performance tuning for Pi
-      shared_buffers: 256MB
-      effective_cache_size: 1GB
-      maintenance_work_mem: 128MB
-      checkpoint_completion_target: 0.9
-      wal_buffers: 16MB
-      default_statistics_target: 100
-      random_page_cost: 1.1
-      effective_io_concurrency: 200
-      work_mem: 8MB
-      min_wal_size: 1GB
-      max_wal_size: 4GB
+      shared_buffers: "256MB"
+      effective_cache_size: "1GB"
+      maintenance_work_mem: "128MB"
+      checkpoint_completion_target: "0.9"
+      wal_buffers: "16MB"
+      default_statistics_target: "100"
+      random_page_cost: "1.1"
+      effective_io_concurrency: "200"
+      work_mem: "8MB"
+      min_wal_size: "1GB"
+      max_wal_size: "4GB"
 
       # Connection limits
-      max_connections: 100
+      max_connections: "100"
 
     # Enable pgvector extension
     shared_preload_libraries:
