--- a/flux/clusters/talos/infrastructure/longhorn/node-labeler.yaml
+++ b/flux/clusters/talos/infrastructure/longhorn/node-labeler.yaml
@@ -17,12 +17,12 @@ spec:
         - /bin/bash
         - -c
         - |
-          echo "Labeling nodes for Longhorn default disk creation..."
-          for node in $(kubectl get nodes -o name); do
+          echo "Labeling control plane nodes (SSD) for Longhorn default disk creation..."
+          for node in $(kubectl get nodes -l node-role.kubernetes.io/control-plane -o name); do
             echo "Labeling $node..."
             kubectl label $node node.longhorn.io/create-default-disk=true --overwrite
           done
-          echo "All nodes labeled successfully!"
+          echo "Control plane nodes labeled successfully!"
 ---
 apiVersion: v1
 kind: ServiceAccount
