--- a/flux/clusters/talos/apps/authelia/deployment.yaml
+++ b/flux/clusters/talos/apps/authelia/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         app.kubernetes.io/name: authelia
     spec:
+      enableServiceLinks: false
       containers:
         - name: authelia
           image: authelia/authelia:4.38
