fix: Use web entrypoint for Cloudflare Tunnel ingress
Cloudflare Tunnel sends HTTP traffic, not HTTPS, so we need to use
the 'web' entrypoint instead of 'websecure'. TLS termination happens
at Cloudflare Tunnel, not at Traefik.

--- a/flux/clusters/talos/apps/authelia/ingressroute.yaml
+++ b/flux/clusters/talos/apps/authelia/ingressroute.yaml
@@ -5,12 +5,10 @@ metadata:
   namespace: authelia
 spec:
   entryPoints:
-    - websecure
+    - web
   routes:
     - match: Host(`auth.jeans-host.net`)
       kind: Rule
       services:
         - name: authelia
           port: 80
-  tls:
-    certResolver: cloudflare
