fix: Add X-Forwarded-Proto header for Authelia behind Cloudflare Tunnel
Authelia requires HTTPS scheme for security. Since Cloudflare Tunnel
terminates TLS and forwards HTTP to Traefik, we need to set the
X-Forwarded-Proto header to https so Authelia knows the original
request was secure.

--- a/flux/clusters/talos/apps/rag-system/minio/ingressroute.yaml
+++ b/flux/clusters/talos/apps/rag-system/minio/ingressroute.yaml
@@ -10,6 +10,8 @@ spec:
     - match: Host(`minio.jeans-host.net`)
       kind: Rule
       middlewares:
+        - name: secure-headers
+          namespace: authelia
         - name: authelia
           namespace: authelia
       services:
