fix: Use username from secret in PostgreSQL init job

--- a/flux/clusters/talos/apps/rag-system/postgres-rag/paperless-db-init-job.yaml
+++ b/flux/clusters/talos/apps/rag-system/postgres-rag/paperless-db-init-job.yaml
@@ -17,7 +17,10 @@ spec:
             - name: PGPORT
               value: "5432"
             - name: PGUSER
-              value: postgres
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-rag-superuser
+                  key: username
             - name: PGPASSWORD
               valueFrom:
                 secretKeyRef:
