--- a/flux/clusters/talos/apps/rag-system/redis/helmrelease.yaml
+++ b/flux/clusters/talos/apps/rag-system/redis/helmrelease.yaml
@@ -25,6 +25,12 @@ spec:
     # Architecture
     architecture: standalone
 
+    # Override image to use current available tag
+    image:
+      registry: docker.io
+      repository: bitnami/redis
+      tag: 7.4.1-debian-12-r3  # Current stable version
+
     # Authentication (no password for internal cluster use)
     auth:
       enabled: false
