Updated the host for the paperless ingress

--- a/flux/clusters/talos/apps/rag-system/paperless/ingressroute.yaml
+++ b/flux/clusters/talos/apps/rag-system/paperless/ingressroute.yaml
@@ -7,7 +7,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`paperless.jeansy.org`)
+    - match: Host(`paperless.jeans-host.net`)
       kind: Rule
       services:
         - name: paperless-paperless-ngx
