fix: Use kubectl image for ragdb init job

--- a/flux/clusters/talos/apps/rag-system/postgres-rag/ragdb-init-job.yaml
+++ b/flux/clusters/talos/apps/rag-system/postgres-rag/ragdb-init-job.yaml
@@ -18,7 +18,7 @@ spec:
       restartPolicy: Never
       containers:
         - name: ragdb-init
-          image: bitnami/postgresql:16
+          image: bitnami/kubectl:latest
           command:
             - /bin/bash
             - -c
